Give carousel images a z-index of -1 to fix left arrow hiding behind image.

--- a/lambdatimes/src/CSS/index.css
+++ b/lambdatimes/src/CSS/index.css
@@ -44,6 +44,10 @@ body {
 #root {
   width: 100%;
 }
+@keyframes fade-in-anim {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
 .App {
   display: flex;
   align-items: center;
@@ -51,6 +55,9 @@ body {
   background-color: #f1f1f1;
   color: #333;
   font-family: 'PT Sans', sans-serif;
+  animation-name: fade-in-anim;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
 }
 /* .top-bar {
   width: 100%;
@@ -313,4 +320,5 @@ body {
 .carousel img {
   width: 100%;
   display: none;
+  z-index: -1;
 }
